Enable Postgis and implement last user location #63
